sootup.jimple.parser/gen/JimpleParser.java
// Generated from /home/smarkus/workspace/Java/soot-reloaded/sootup.jimple.parser/src/main/antlr4/sootup/jimple/Jimple.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JimpleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, LINE_COMMENT=26, LONG_COMMENT=27, STRING_CONSTANT=28, CLASS=29, 
		EXTENDS=30, IMPLEMENTS=31, BREAKPOINT=32, CASE=33, CATCH=34, CMP=35, CMPG=36, 
		CMPL=37, DEFAULT=38, ENTERMONITOR=39, EXITMONITOR=40, GOTO=41, IF=42, 
		INSTANCEOF=43, LENGTHOF=44, SWITCH=45, NEG=46, NEWARRAY=47, NEWMULTIARRAY=48, 
		NEW=49, NOP=50, RETURN=51, RET=52, NONSTATIC_INVOKE=53, STATICINVOKE=54, 
		DYNAMICINVOKE=55, THROWS=56, THROW=57, NULL=58, FROM=59, TO=60, WITH=61, 
		COMMA=62, L_BRACE=63, R_BRACE=64, SEMICOLON=65, L_BRACKET=66, R_BRACKET=67, 
		L_PAREN=68, R_PAREN=69, COLON=70, DOT=71, EQUALS=72, COLON_EQUALS=73, 
		AND=74, OR=75, XOR=76, MOD=77, CMPEQ=78, CMPNE=79, CMPGT=80, CMPGE=81, 
		CMPLT=82, CMPLE=83, SHL=84, SHR=85, USHR=86, PLUS=87, MINUS=88, MULT=89, 
		DIV=90, BOOL_CONSTANT=91, FLOAT_CONSTANT=92, DEC_CONSTANT=93, HEX_CONSTANT=94, 
		IDENTIFIER=95, BLANK=96;
	public static final int
		RULE_banana = 0, RULE_identifier = 1, RULE_integer_constant = 2, RULE_file = 3, 
		RULE_importItem = 4, RULE_modifier = 5, RULE_file_type = 6, RULE_extends_clause = 7, 
		RULE_implements_clause = 8, RULE_type = 9, RULE_type_list = 10, RULE_member = 11, 
		RULE_field = 12, RULE_method = 13, RULE_method_name = 14, RULE_throws_clause = 15, 
		RULE_method_body = 16, RULE_method_body_contents = 17, RULE_trap_clauses = 18, 
		RULE_statements = 19, RULE_declarations = 20, RULE_declaration = 21, RULE_statement = 22, 
		RULE_stmt = 23, RULE_assignments = 24, RULE_identity_ref = 25, RULE_case_stmt = 26, 
		RULE_case_label = 27, RULE_goto_stmt = 28, RULE_trap_clause = 29, RULE_value = 30, 
		RULE_bool_expr = 31, RULE_invoke_expr = 32, RULE_binop_expr = 33, RULE_unop_expr = 34, 
		RULE_method_subsignature = 35, RULE_method_signature = 36, RULE_reference = 37, 
		RULE_field_signature = 38, RULE_array_descriptor = 39, RULE_arg_list = 40, 
		RULE_immediate = 41, RULE_constant = 42, RULE_binop = 43, RULE_unop = 44;
	private static String[] makeRuleNames() {
		return new String[] {
			"banana", "identifier", "integer_constant", "file", "importItem", "modifier", 
			"file_type", "extends_clause", "implements_clause", "type", "type_list", 
			"member", "field", "method", "method_name", "throws_clause", "method_body", 
			"method_body_contents", "trap_clauses", "statements", "declarations", 
			"declaration", "statement", "stmt", "assignments", "identity_ref", "case_stmt", 
			"case_label", "goto_stmt", "trap_clause", "value", "bool_expr", "invoke_expr", 
			"binop_expr", "unop_expr", "method_subsignature", "method_signature", 
			"reference", "field_signature", "array_descriptor", "arg_list", "immediate", 
			"constant", "binop", "unop"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'override'", "'overrides'", "'L'", "'import'", "'abstract'", "'final'", 
			"'native'", "'public'", "'protected'", "'private'", "'static'", "'synchronized'", 
			"'transient'", "'volatile'", "'strictfp'", "'enum'", "'interface'", "'annotation interface'", 
			"'<init>'", "'<clinit>'", "'@parameter'", "'@this:'", "'@caughtexception'", 
			"'handle:'", "'methodtype:'", null, null, null, "'class'", "'extends'", 
			"'implements'", "'breakpoint'", "'case'", "'catch'", "'cmp'", "'cmpg'", 
			"'cmpl'", "'default'", "'entermonitor'", "'exitmonitor'", "'goto'", "'if'", 
			"'instanceof'", "'lengthof'", null, "'neg'", "'newarray'", "'newmultiarray'", 
			"'new'", "'nop'", "'return'", "'ret'", null, "'staticinvoke'", "'dynamicinvoke'", 
			"'throws'", "'throw'", "'null'", "'from'", "'to'", "'with'", "','", "'{'", 
			"'}'", "';'", "'['", "']'", "'('", "')'", "':'", "'.'", "'='", "':='", 
			"'&'", "'|'", "'^'", "'%'", "'=='", "'!='", "'>'", "'>='", "'<'", "'<='", 
			"'<<'", "'>>'", "'>>>'", "'+'", "'-'", "'*'", "'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "LINE_COMMENT", "LONG_COMMENT", "STRING_CONSTANT", "CLASS", 
			"EXTENDS", "IMPLEMENTS", "BREAKPOINT", "CASE", "CATCH", "CMP", "CMPG", 
			"CMPL", "DEFAULT", "ENTERMONITOR", "EXITMONITOR", "GOTO", "IF", "INSTANCEOF", 
			"LENGTHOF", "SWITCH", "NEG", "NEWARRAY", "NEWMULTIARRAY", "NEW", "NOP", 
			"RETURN", "RET", "NONSTATIC_INVOKE", "STATICINVOKE", "DYNAMICINVOKE", 
			"THROWS", "THROW", "NULL", "FROM", "TO", "WITH", "COMMA", "L_BRACE", 
			"R_BRACE", "SEMICOLON", "L_BRACKET", "R_BRACKET", "L_PAREN", "R_PAREN", 
			"COLON", "DOT", "EQUALS", "COLON_EQUALS", "AND", "OR", "XOR", "MOD", 
			"CMPEQ", "CMPNE", "CMPGT", "CMPGE", "CMPLT", "CMPLE", "SHL", "SHR", "USHR", 
			"PLUS", "MINUS", "MULT", "DIV", "BOOL_CONSTANT", "FLOAT_CONSTANT", "DEC_CONSTANT", 
			"HEX_CONSTANT", "IDENTIFIER", "BLANK"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Jimple.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JimpleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class BananaContext extends ParserRuleContext {
		public BananaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_banana; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JimpleListener ) ((JimpleListener)listener).enterBanana(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JimpleListener ) ((JimpleListener)listener).exitBanana(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JimpleVisitor ) return ((JimpleVisitor<? extends T>)visitor).visitBanana(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BananaContext banana() throws RecognitionException {
		BananaContext _localctx = new BananaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_banana);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_la = _input.LA(1);
			if ( !(_la==T__0 || _la==T__1) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode STRING_CONSTANT() { return getToken(JimpleParser.STRING_CONSTANT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(JimpleParser.IDENTIFIER, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JimpleListener ) ((JimpleListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JimpleListener ) ((JimpleListener)listener).exitIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JimpleVisitor ) return ((JimpleVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_identifier);
		try {
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				match(STRING_CONSTANT);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				match(STRING_CONSTANT);
				setState(94);
				matchWildcard();
				setState(95);
				match(IDENTIFIER);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(96);
				match(IDENTIFIER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Integer_constantContext extends ParserRuleContext {
		public TerminalNode DEC_CONSTANT() { return getToken(JimpleParser.DEC_CONSTANT, 0); }
		public TerminalNode HEX_CONSTANT() { return getToken(JimpleParser.HEX_CONSTANT, 0); }
		public TerminalNode PLUS() { return getToken(JimpleParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(JimpleParser.MINUS, 0); }
		public Integer_constantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integer_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JimpleListener ) ((JimpleListener)listener).enterInteger_constant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JimpleListener ) ((JimpleListener)listener).exitInteger_constant(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JimpleVisitor ) return ((JimpleVisitor<? extends T>)visitor).visitInteger_constant(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Integer_constantContext integer_constant() throws RecognitionException {
		Integer_constantContext _localctx = new Integer_constantContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_integer_constant);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PLUS || _la==MINUS) {
				{
				setState(99);
				_la = _input.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(102);
			_la = _input.LA(1);
			if ( !(_la==DEC_CONSTANT || _la==HEX_CONSTANT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(103);
				match(T__2);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FileContext extends ParserRuleContext {
		public IdentifierContext classname;
		public File_typeContext file_type() {
			return getRuleContext(File_typeContext.class,0);
		}
		public TerminalNode L_BRACE() { return getToken(JimpleParser.L_BRACE, 0); }
		public TerminalNode R_BRACE() { return getToken(JimpleParser.R_BRACE, 0); }
		public TerminalNode EOF() { return getToken(JimpleParser.EOF, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public List<ImportItemContext> importItem() {
			return getRuleContexts(ImportItemContext.class);
		}
		public ImportItemContext importItem(int i) {
			return getRuleContext(ImportItemContext.class,i);
		}
		public List<ModifierContext> modifier() {
			return getRuleContexts(ModifierContext.class);
		}
		public ModifierContext modifier(int i) {
			return getRuleContext(ModifierContext.class,i);
		}
		public Extends_clauseContext extends_clause() {
			return getRuleContext(Extends_clauseContext.class,0);
		}
		public Implements_clauseContext implements_clause() {
			return getRuleContext(Implements_clauseContext.class,0);
		}
		public List<MemberContext> member() {
			return getRuleContexts(MemberContext.class);
		}
		public MemberContext member(int i) {
			return getRuleContext(MemberContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JimpleListener ) ((JimpleListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JimpleListener ) ((JimpleListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JimpleVisitor ) return ((JimpleVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(106);
				importItem();
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15))) != 0)) {
				{
				{
				setState(112);
				modifier();
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118);
			file_type();
			setState(119);
			((FileContext)_localctx).classname = identifier();
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(120);
				extends_clause();
				}
			}

			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IMPLEMENTS) {
				{
				setState(123);
				implements_clause();
				}
			}

			setState(126);
			match(L_BRACE);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << STRING_CONSTANT))) != 0) || _la==IDENTIFIER) {
				{
				{
				setState(127);
				member();
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(133);
			match(R_BRACE);
			setState(134);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportItemContext extends ParserRuleContext {
		public IdentifierContext location;
		public TerminalNode SEMICOLON() { return getToken(JimpleParser.SEMICOLON, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ImportItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JimpleListener ) ((JimpleListener)listener).enterImportItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JimpleListener ) ((JimpleListener)listener).exitImportItem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JimpleVisitor ) return ((JimpleVisitor<? extends T>)visitor).visitImportItem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportItemContext importItem() throws RecognitionException {
		ImportItemContext _localctx = new ImportItemContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importItem);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(T__3);
			setState(137);
			((ImportItemContext)_localctx).location = identifier();
			setState(138);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModifierContext extends ParserRuleContext {
		public ModifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JimpleListener ) ((JimpleListener)listener).enterModifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JimpleListener ) ((JimpleListener)listener).exitModifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JimpleVisitor ) return ((JimpleVisitor<? extends T>)visitor).visitModifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModifierContext modifier() throws RecognitionException {
		ModifierContext _localctx = new ModifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_modifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class File_typeContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(JimpleParser.CLASS, 0); }
		public File_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JimpleListener ) ((JimpleListener)listener).enterFile_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JimpleListener ) ((JimpleListener)listener).exitFile_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JimpleVisitor ) return ((JimpleVisitor<? extends T>)visitor).visitFile_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final File_typeContext file_type() throws RecognitionException {
		File_typeContext _localctx = new File_typeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_file_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__16) | (1L << T__17) | (1L << CLASS))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
